Mixins: Hover - fix pseudo orders, update note regarding sticky hover/focus on iOS

--- a/scss/mixins/_hover.scss
+++ b/scss/mixins/_hover.scss
@@ -5,24 +5,24 @@
 }
 
 @mixin hover-focus {
-    &:focus,
-    &:hover {
+    &:hover
+    &:focus {
         @content;
     }
 }
 
 @mixin plain-hover-focus {
     &,
-    &:focus,
-    &:hover {
+    &:hover,
+    &:focus {
         @content;
     }
 }
 
 @mixin hover-focus-active {
+    &:hover
     &:focus,
-    &:active,
-    &:hover {
+    &:active {
         @content;
     }
 }
